--- a/css/main.css
+++ b/css/main.css
@@ -385,7 +385,7 @@ body>section,
   top: 0;
   width: 100%;
   height: 100%;
-  color: #0f0f0f;
+  color: #fff;
 
   opacity: 0;
   filter: alpha(opacity=0);
@@ -414,15 +414,19 @@ body>section,
 }
 
 .work-item .overlay a {
-  border: 1px solid #0f0f0f;
+  border: 1px solid #fff;
   border-radius: 50%;
   display: inline-block;
   margin-top: 20%;
   padding: 7px 10px;
 }
 
+.fa.fa-eye.fa-lg {
+  color: #fff;
+}
+
 .work-item .overlay a:hover {
-  color: #0f0f0f;
+  color: #F5F5F5;
 }
 
 .work-item .overlay h4 {
@@ -652,7 +656,7 @@ label.error {
 
 
 .footer {
-  background-color: #fff;
+  background-color: #F5F5F5;
   /* border-top: 5px solid #062033; */
   color: #0f0f0f;
 }
